@@ -1,3 +1,8 @@
+2014-11-09  Kelvin White  <kwhite@gnu.org>
+
+	* erc-match.el, erc-join.el, erc-stamp.el, erc-backend.el, erc.el,
+	erc-button.el: Update version to 24.5.
+
 2014-11-09  Ivan Shmakov  <ivan@siamics.net>
 
 	* erc-track.el (erc-modified-channels-display): Update mode line
